# empkins-macro

./: .bumpversion.toml  README.md  _tasks.py  pyproject.toml
empkins_macro/feature_extraction/: __init__.py  _utils.py  feature_extraction.py
empkins_macro/feature_extraction/base_functions/: __init__.py  _base_functions.py
empkins_macro/feature_extraction/body_posture_expert/: __init__.py  _absolute_movement.py  _below_threshold.py  _euclidean_distance.py  _static_periods.py  _utils.py
empkins_macro/feature_extraction/body_posture_gait/: __init__.py  _bouncy.py
empkins_macro/feature_extraction/generic/: __init__.py  _generic.py
empkins_macro/feature_extraction/spatio_temporal/: __init__.py  _gait.py
empkins_macro/feature_extraction/temporal_change/: __init__.py  _temporal_change.py
empkins_macro/feature_extraction/tug/: _tug.py
empkins_macro/utils/: exceptions.py
src/empkins_macro/feature_extraction/: __init__.py  _utils.py  feature_extraction.py
src/empkins_macro/feature_extraction/base_functions/: _base_functions.py
src/empkins_macro/feature_extraction/body_posture_expert/: __init__.py  _absolute_movement.py  _below_threshold.py  _euclidean_distance.py  _flexion.py  _range_of_motion.py  _static_periods.py  _utils.py
src/empkins_macro/feature_extraction/body_posture_gait/: _bouncy.py
src/empkins_macro/feature_extraction/generic/: __init__.py  _generic.py
src/empkins_macro/feature_extraction/postural_sway/: __init__.py  utils.py
src/empkins_macro/feature_extraction/postural_sway/cop_path/: __init__.py  _cop_distances.py  _cop_distances_sliding_window.py  _sliding_window_path_length.py  cop_path_length.py
src/empkins_macro/feature_extraction/postural_sway/frequency/: __init__.py  _feature_extraction.py
src/empkins_macro/feature_extraction/postural_sway/rsa/: __init__.py  _feature_extraction.py  _rsa.py
src/empkins_macro/feature_extraction/spatio_temporal/: __init__.py  _gait.py
src/empkins_macro/feature_extraction/temporal_change/: __init__.py  _temporal_change.py
src/empkins_macro/feature_extraction/tug/: _tug.py
src/empkins_macro/utils/: _metrics.py  _types.py  exceptions.py
tests/: test_empkins_macro.py
