[project]
name = "empkins-macro"
version = "0.1.0"
description = "A Python package to work with EmpkinS Macro data."
authors = [
    { name = "Robert Richer", email = "robert.richer@fau.de" },
    { name = "Luca Abel", email = "luca.abel@fau.de" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "tsfresh>=0,<1",
    "biopsykit",
    "empkins-io",
]

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "ruff>=0.6.3,<0.7",
    "ipykernel>=6.29.5,<7",
    "ipympl>=0.9.6,<0.10",
]

[tool.uv.sources]
biopsykit = { git = "https://github.com/mad-lab-fau/BioPsyKit.git", branch = "main" }
#empkins-io = { git = "https://github.com/empkins/empkins-io.git", branch = "main" }
empkins-io = { path = "../empkins-io", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
format = ["_auto_fix", "_format"]
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --format=github"
_check_black = "black . --check"
ci_check = { sequence = ["_check_black", "_lint_ci"], help = "Check all potential format and linting issues." }
test = {cmd = "pytest --cov=empkins_macro --cov-report=xml", help = "Run Pytest with coverage." }
update_version = {"script" = "_tasks:task_update_version"}
default = {sequence = ["format", "lint", "test"], help = "Run the default pipeline, consisting of formatting, linting, and testing."}
